# algo-trading-intraday-research

./: .gitignore  README.md  economic_calendar_readme.md  main.py  pyproject.toml  requirements.txt
docs/: mnq_pullback_execution_note.md
notebooks/: mean_reversion_intraday_campaign.ipynb  meta_risk_campaign.ipynb  mnq_orb_pullback_equal_weight_client.executed.html  mnq_orb_pullback_equal_weight_client.executed.ipynb  mnq_orb_pullback_equal_weight_client.ipynb  mnq_orb_pullback_research_client.executed.html  mnq_orb_pullback_research_client.executed.ipynb  mnq_orb_pullback_research_client.ipynb  orb_M2K_final_ensemble_validation.ipynb  orb_MES_final_ensemble_validation.ipynb  orb_MGC_final_ensemble_validation.ipynb  orb_MNQ_final_ensemble_validation.ipynb  orb_MNQ_sizing_3state_client.executed.ipynb  orb_MNQ_sizing_3state_client.ipynb  orb_MNQ_vix_vvix_client.executed.ipynb  orb_MNQ_vix_vvix_client.ipynb  orb_final_candidate_validation.ipynb  orb_or_window_breakout_close_direction_validation.ipynb  orb_topstep_validation.ipynb  research_main.ipynb  volume_climax_pullback_micro_portfolio_client.executed.ipynb  volume_climax_pullback_micro_portfolio_client.ipynb  volume_climax_pullback_mnq_risk_sizing_client.executed.ipynb  volume_climax_pullback_mnq_risk_sizing_client.ipynb  volume_climax_pullback_v3_M2K_client.executed.ipynb  volume_climax_pullback_v3_M2K_client.ipynb  volume_climax_pullback_v3_MES_client.executed.ipynb  volume_climax_pullback_v3_MES_client.ipynb  volume_climax_pullback_v3_MGC_client.executed.ipynb  volume_climax_pullback_v3_MGC_client.ipynb  (+11 more)
(+1938 files in other folders)
