[project]
name = "algo-trading-intraday-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "databento>=0.73.0",
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "pytest>=7.0",
    "seaborn>=0.13",
]
